HHH-18127 - Leverage hibernate-models Annotation-as-Class